@@ -165,6 +165,8 @@
 		· getItemCurrentAnim.
 		· getItemAnimID.
 		· getItemAnimFrame.
+		· getPlayerHeadRotation.
+		· getPlayerTorsoRotation.
 	
 	
 	
